.opsera-fbb1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-fbb1-dev
  labels:
    tenant: opsera
    app: fbb1
    environment: dev
    managed-by: opsera-c2c
